# sps

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: README.md  SUMMARY.md  config.yaml
conf/benchmark/: speed.yaml
conf/data/: fineweb-edu.yaml
conf/eval/: default.yaml
conf/experiment/: l_delayed_state_w64_20b.yaml  l_full_attention_20b.yaml  l_full_attention_40b.yaml  l_sps_w4096_20b.yaml  l_sps_w64_20b.yaml  m_delayed_state_w64_20b.yaml  m_full_attention_20b.yaml  m_full_attention_40b.yaml  m_sps_w4096_20b.yaml  m_sps_w64_20b.yaml  s_delayed_state_w0_20b.yaml  s_delayed_state_w16_20b.yaml  s_delayed_state_w256_20b.yaml  s_delayed_state_w64_10b.yaml  s_delayed_state_w64_10b_seed0.yaml  s_delayed_state_w64_10b_seed1.yaml  s_delayed_state_w64_20b.yaml  s_full_attention_10b.yaml  s_full_attention_10b_seed0.yaml  s_full_attention_10b_seed1.yaml  s_full_attention_20b.yaml  s_full_attention_40b.yaml  s_reverse_sps_w0_20b.yaml  s_reverse_sps_w16_20b.yaml  s_reverse_sps_w256_20b.yaml  s_reverse_sps_w64_20b.yaml  s_sps_w0_20b.yaml  s_sps_w16_20b.yaml  s_sps_w256_20b.yaml  s_sps_w4096_10b.yaml  s_sps_w4096_10b_seed0.yaml  s_sps_w4096_10b_seed1.yaml  s_sps_w4096_20b.yaml  s_sps_w64_10b.yaml  s_sps_w64_10b_seed0.yaml  s_sps_w64_10b_seed1.yaml  s_sps_w64_20b.yaml  xl_delayed_state_w64_20b.yaml  xl_full_attention_20b.yaml  xl_sps_w4096_20b.yaml  (+6 more)
conf/logging/: default.yaml
conf/model/: delayed_state.yaml  reverse_sps.yaml  sps.yaml  standard.yaml
docs/: index.html
lm_eval_tasks/: gov_report_nll.yaml  pile_books3.yaml
scripts/: evaluate.py  generate.py  train.py
(+98 files in other folders)
